<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ADAS Manager</string>
    <string name="common_google_play_services_unknown_issue" translatable="false">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="cap_button_apply" translatable="false">Apply</string>
    <string name="cap_button_cancel" translatable="false">Cancel</string>
    <string name="cap_button_continue" translatable="false">Continue</string>
    <string name="cap_button_exit" translatable="false">Exit</string>
    <string name="cap_button_make" translatable="false">Make</string>
    <string name="cap_button_make_donate" translatable="false">Make donate</string>
    <string name="cap_button_make_once_more" translatable="false">Make once more</string>
    <string name="cap_can_settings" translatable="false">Can settings for</string>
    <string name="cap_pid_settings" translatable="false">PID settings </string>
    <string name="cap_pid_mode" translatable="false">PID check mode </string>
    <string name="cap_pid_value" translatable="false">Type </string>
    <string name="cap_channel1" translatable="false">Channel1</string>
    <string name="cap_channel2" translatable="false">Channel2</string>
    <string name="cap_error" translatable="false">Error</string>
    <string name="cap_header_mode" translatable="false">Mode</string>
    <string name="cap_display_mode" translatable="false">Display</string>
    <string name="cap_header_rate" translatable="false">Rate</string>
    <string name="cap_header_select_donate" translatable="false">Select donation you want to make</string>
    <string name="cap_menu_about" translatable="false">About</string>
    <string name="cap_menu_clear_data" translatable="false">Clear data</string>
    <string name="cap_menu_donation" translatable="false">Donation</string>
    <string name="cap_menu_send_email" translatable="false">Send log to developer</string>
    <string name="cap_menu_settings" translatable="false">Settings</string>
    <string name="cap_set_keep_screen_on" translatable="false">Keep screen on while bus listening</string>
    <string name="cap_set_screen_orientation" translatable="false">Screen orientation</string>
    <string name="cap_tab_log" translatable="false">Log</string>
    <string name="cap_tab_table" translatable="false">Table</string>
    <string name="cap_tab_trace" translatable="false">Trace</string>
    <string name="cap_table_count" translatable="false">Count</string>
    <string name="cap_table_data" translatable="false">Data</string>
    <string name="cap_table_id" translatable="false">PID</string>
    <string name="cap_table_interval" translatable="false">Cycle</string>
    <string name="cap_table_length" translatable="false">Len</string>
    <string name="cap_table_number" translatable="false">\#</string>
    <string name="cap_table_time" translatable="false">Time</string>
    <string name="mode_extended" translatable="false">Extended</string>
    <string name="mode_standard" translatable="false">Standard</string>
    <string name="msg_donation_service_error" translatable="false">Error of connection with Google billing service</string>
    <string name="msg_gratitude_for_donation" translatable="false">Thank you for participation</string>
    <string name="str_msg_adapter_not_connected" translatable="false">CAN bus adapter is not connected</string>
    <string name="str_msg_need_btr_set" translatable="false">You should set btr registers value</string>
    <string name="str_trace_status_head" translatable="false">General frame count:</string>
    <string name="txt_adapter_header" translatable="false">USB-CAN OBD2 Scan tool</string>
    <string name="accept" translatable="false">Accept</string>
    <string name="ads_unit_id_demo" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ads_unit_id_trace" translatable="false">ca-app-pub-1328633298301741/2448696141</string>
    <string name="auth_google_play_services_client_facebook_display_name" translatable="false">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name" translatable="false">Google</string>
    <string name="btcap_check" translatable="false">↺</string>
    <string name="create_calendar_message" translatable="false">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title" translatable="false">Create calendar event</string>
    <string name="decline" translatable="false">Decline</string>
    <string name="def_set_screen_orientation" translatable="false">PORTRAIT</string>
    <string name="store_picture_message" translatable="false">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title" translatable="false">Save image</string>
    <string name="device_name">HM320</string>
    <string name="symbol_dash">-</string>
    <string name="unit_cm">cm</string>
    <string name="main_date_time_display_format">dd MMM yyyy,hh:mm,a</string>
    <string name="default_date_format">dd MMM yyyy</string>
    <string name="calibration_date_format">yyyy-MM-dd</string>
    <string name="yes">Yes</string>
    <string name="yes_caps">YES</string>
    <string name="no">No</string>
    <string name="no_caps">NO</string>
    <string name="send">Send</string>
    <string name="send_caps">SEND</string>
    <string name="ok">Ok</string>
    <string name="ok_caps">OK</string>
    <string name="next">Next</string>
    <string name="next_caps">NEXT</string>
    <string name="save">Save</string>
    <string name="save_caps">SAVE</string>
    <string name="select">Select</string>
    <string name="select_caps">SELECT</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="download">Download</string>
    <string name="download_caps">DOWNLOAD</string>
    <string name="delete">Delete</string>
    <string name="delete_caps">DELETE</string>
    <string name="delete_count">Delete (%1$d / %2$d)</string>
    <string name="delete_caps_count">DELETE (%1$d / %2$d)</string>
    <string name="play">Play</string>
    <string name="play_caps">PLAY</string>
    <string name="connected_to_device">Connected to device.</string>
    <string name="disconnected_to_device">Disconnected to device.</string>
    <string name="connection_with_device_failed">The connection with the device failed.</string>
    <string name="permission_needs_description">This permission is required to use the features.</string>
    <string name="permission_denied_description">Denied permission. You can not proceed to the next step.</string>
    <string name="check_usb_connection">Please check USB connection status.</string>
    <string name="check_network_connection">Unable to connect to the network.\nCheck your network settings and try again.</string>
    <string name="error_reason">[Error] %1$s.</string>
    <string name="server_error_other_parsing_error">Server error code. 0001</string>
    <string name="server_error_result_key_not_exist">Server error code. 0002</string>
    <string name="server_error_result_fail">Server error code. 0003</string>
    <string name="server_error_key_not_exist">Server error code. 0004</string>
    <string name="server_error_file_size">Server error code. 0005</string>
    <string name="server_error_items_empty">Server error code. 0006</string>
    <string name="unknown">Unknown</string>
    <string name="device_connection_failure">Connection failure</string>
    <string name="device_connection_failure_desc">Device connection was failed.\nClose the app and connect USB cable again.</string>
    <string name="device_connection_dialog_title">USB connection status</string>
    <string name="device_connection_dialog_open_desc">Connected to device.</string>
    <string name="device_connection_dialog_close_desc">Disconnected to device.</string>
    <string name="device_no_response">No response from the device.</string>
    <string name="error_wrong_format">Error: The setting value does not match the format.</string>
    <string name="notification">Notification</string>
    <string name="insufficient_storage">Storage space running out.</string>
    <string name="latest_date_of_change">Latest : %1$s</string>
    <string name="deleting">Deleting &#8230;</string>
    <string name="notice">notice</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="driver_information">Driver Information</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="model_name">Model Name</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="release_date">Release Date</string>
    <string name="vehicle_type_car">Passenger car</string>
    <string name="vehicle_type_bus">Bus</string>
    <string name="vehicle_type_truck">Truck</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_identification_number">Vehicle Identification Number</string>
    <string name="vehicle_registration_number">Vehicle Registration Number</string>
    <string name="business_registration_number">Business Registration Number</string>
    <string name="driver_code">Driver License ID</string>
    <string name="select_vehicle_type">Please select a vehicle type.</string>
    <string name="enter_vin_code">Please enter the vehicle identification number.</string>
    <string name="wrong_vin_code">The vehicle identification number is incorrect.\nPlease enter again.</string>
    <string name="enter_vehicle_registration_number">Please enter the vehicle registration number.</string>
    <string name="wrong_vehicle_registration_number">The vehicle registration number is incorrect.\nPlease enter again.</string>
    <string name="enter_business_registration_number">Please enter the business registration number.</string>
    <string name="wrong_business_registration_number">The business registration number is incorrect.\nPlease enter again.</string>
    <string name="enter_driver_code">Please enter the driver license id.</string>
    <string name="wrong_driver_code">The driver license id is incorrect.\nPlease enter again.</string>
    <string name="enter_vehicle_info">Please enter the vehicle Information.</string>
    <string name="enter_driver_info">Please enter the driver Information.</string>
    <string name="type_city_bus">11 City Bus</string>
    <string name="type_rural_bus">12 Rural Bus</string>
    <string name="type_town_bus">13 Town Bus</string>
    <string name="type_intercity_bus">14 Intercity Bus</string>
    <string name="type_express_bus">15 Express Bus</string>
    <string name="type_chartered_bus">16 Chartered Bus</string>
    <string name="type_special_passenger_vehicle">17 Special Passenger Vehicle</string>
    <string name="type_regular_taxi">21 Regular Taxi</string>
    <string name="type_private_taxi">22 Private Taxi</string>
    <string name="type_general_lorry">31 General Truck</string>
    <string name="type_individual_lorry">32 Individual Truck</string>
    <string name="type_non_commercial_vehicle">41 Non-commercial Vehicle</string>
    <string name="step1">STEP 1</string>
    <string name="step2">STEP 2</string>
    <string name="step3">STEP 3</string>
    <string name="step4">STEP 4</string>
    <string name="step5">STEP 5</string>
    <string name="success_send_vehicle_info">Vehicle information was set up.</string>
    <string name="vehicle_info_send_to_email">Apply registration of vehicle information</string>
    <string name="vehicle_info_send_to_email_underline"><u>Apply registration information</u></string>
    <string name="vehicle_info_send_to_email_desc">Enter [Manufacturer/Model/Fuel type/Release year]</string>
    <string name="dtg_setting">DTG Settings</string>
</resources>