<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/parent"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/transparent"
	android:orientation="vertical" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical" >
		<TextView
			android:id="@+id/tv_title"
			android:layout_width="match_parent"
			android:layout_height="46.00dp"
			android:background="@color/white"
			android:gravity="center_vertical"
			android:paddingStart="17.00dp"
			android:paddingEnd="17.00dp"
			android:paddingTop="10.00dp"
			android:textColor="@color/black"
			android:textSize="@dimen/size_50px"
			android:text="@string/symbol_dash"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"/>

		<TextView
			android:id="@+id/tv_contents"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingStart="17.00dp"
			android:paddingEnd="17.00dp"
			android:paddingTop="10.00dp"
			android:paddingBottom="10.00dp"
			android:textColor="@color/black"
			android:textSize="@dimen/size_45px"
			android:text="@string/symbol_dash"/>
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"/>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="40.00dp"
			android:paddingEnd="@dimen/size_40px">
			<Button
				android:id="@+id/btn_yes"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/selector_dialog_btn_bg"
				android:layout_alignParentEnd="true"
				android:textColor="#0199E2"
				android:textSize="@dimen/size_45px"
				android:text="@string/yes_caps"/>
			<Button
				android:id="@+id/btn_no"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/selector_dialog_btn_bg"
				android:layout_toStartOf="@+id/btn_yes"
				android:textColor="#0199E2"
				android:textSize="@dimen/size_45px"
				android:text="@string/no_caps"/>
		</RelativeLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="10.00dp"/>
	</LinearLayout>
</LinearLayout>