<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sub_bg"
    android:clickable="true">

    <!-- Top UI -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1920">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="400"
            android:orientation="vertical"
            android:weightSum="400">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="76"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="150"
                android:orientation="horizontal"
                android:weightSum="1080">
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="34"/>
                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="150"
                    android:src="@drawable/icon_hamb"
                    android:scaleType="fitCenter"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="723"/>
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="150"
                    android:src="@drawable/icon_back"
                    android:scaleType="fitCenter"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="23"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="124"
                android:gravity="center"
                android:textSize="@dimen/size_80px"
                android:textColor="@color/white"
                android:text="@string/dtg_setting"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1520"/>
    </LinearLayout>

    <!-- Main UI -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1920">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="549"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1221"
            android:orientation="horizontal"
            android:weightSum="1080">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="64"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="952"
                android:orientation="vertical"
                android:weightSum="1221">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="117"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tv_model_caption"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="@dimen/size_36px"
                            android:textColor="#494856"
                            android:textSize="@dimen/size_50px"
                            android:text="@string/model"/>
                        <TextView
                            android:id="@+id/tv_model_value"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="@dimen/size_30px"
                            android:layout_marginTop="@dimen/size_12px"
                            android:layout_marginBottom="@dimen/size_12px"
                            android:paddingStart="@dimen/size_36px"
                            android:paddingEnd="@dimen/size_36px"
                            android:textColor="@color/white"
                            android:textSize="@dimen/size_52px"
                            android:text="@string/device_name"
                            android:background="@drawable/circle_firmware_version_text_bg"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="144"
                    android:orientation="horizontal"
                    android:weightSum="952">
                    <TextView
                        android:id="@+id/tv_vehicle_type_caption"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="399"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/size_36px"
                        android:textColor="#494856"
                        android:textSize="@dimen/size_50px"
                        android:text="@string/vehicle_type"/>
                    <com.adasone.hm320a.view.MarqueeTextView
                        android:id="@+id/tv_vehicle_type_select"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="553"
                        android:gravity="center"
                        android:paddingStart="@dimen/size_50px"
                        android:paddingEnd="@dimen/size_84px"
                        android:textColor="#494856"
                        android:textSize="@dimen/size_52px"
                        android:text="@string/select"
                        android:scrollHorizontally="true"
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:background="@drawable/vehicle_info4_type"
                        android:clickable="true"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"/>
                <TextView
                    android:id="@+id/tv_vin_code"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="76"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/size_36px"
                    android:textColor="#494856"
                    android:textSize="@dimen/size_50px"
                    android:text="@string/vehicle_identification_number"/>
                <EditText
                    android:id="@+id/edit_vin_code"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="150"
                    android:inputType="text"
                    android:focusableInTouchMode="true"
                    android:textColorHint="#45a5b6"
                    android:hint="@string/symbol_dash"
                    android:paddingStart="@dimen/size_50px"
                    android:textSize="@dimen/size_50px"
                    android:textColor="#00a2ca"
                    android:background="@drawable/vehicle_info4_textbox"/>
                <TextView
                    android:id="@+id/tv_vehicle_number"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="76"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/size_36px"
                    android:textColor="#494856"
                    android:textSize="@dimen/size_50px"
                    android:text="@string/vehicle_registration_number"/>
                <EditText
                    android:id="@+id/edit_vehicle_number"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="150"
                    android:inputType="text"
                    android:focusableInTouchMode="true"
                    android:textColorHint="#45a5b6"
                    android:hint="@string/symbol_dash"
                    android:paddingStart="@dimen/size_50px"
                    android:textSize="@dimen/size_50px"
                    android:textColor="#00a2ca"
                    android:background="@drawable/vehicle_info4_textbox"/>
                <TextView
                    android:id="@+id/tv_business_number"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="76"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/size_36px"
                    android:textColor="#494856"
                    android:textSize="@dimen/size_50px"
                    android:text="@string/business_registration_number"/>
                <EditText
                    android:id="@+id/edit_business_number"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="150"
                    android:inputType="text"
                    android:focusableInTouchMode="true"
                    android:textColorHint="#45a5b6"
                    android:hint="@string/symbol_dash"
                    android:paddingStart="@dimen/size_50px"
                    android:textSize="@dimen/size_50px"
                    android:textColor="#00a2ca"
                    android:background="@drawable/vehicle_info4_textbox"/>
                <TextView
                    android:id="@+id/tv_driver_code"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="76"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/size_36px"
                    android:textColor="#494856"
                    android:textSize="@dimen/size_50px"
                    android:text="@string/driver_code"/>
                <EditText
                    android:id="@+id/edit_driver_code"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="150"
                    android:inputType="text"
                    android:focusableInTouchMode="true"
                    android:textColorHint="#45a5b6"
                    android:hint="@string/symbol_dash"
                    android:paddingStart="@dimen/size_50px"
                    android:textSize="@dimen/size_50px"
                    android:textColor="#00a2ca"
                    android:background="@drawable/vehicle_info4_textbox"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="41"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="64"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="150"
            android:background="@drawable/selector_bottom_btn"
            android:textColor="@color/button_enable"
            android:textSize="@dimen/size_50px"
            android:text="@string/ok_caps"/>

    </LinearLayout>


</FrameLayout>

